Bug 263287 - Backward command does nothing for LIRCing
Summary: Backward command does nothing for LIRCing
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.4.1
Platform: Ubuntu Linux
: NOR normal
Target Milestone: 2.4.1
Assignee: Amarok Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-01-16 02:59 UTC by Andrew Gaydenko
Modified: 2011-07-25 21:16 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.4.2
Sentry Crash Report:


Attachments
trivial fix (525 bytes, patch)
2011-07-25 20:20 UTC, Matthieu Bedouet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andrew Gaydenko 2011-01-16 02:59:15 UTC
Version:           2.4.0 (using KDE 4.5.5) 
OS:                Linux

"Backward" command does nothing for LIRCing: I have configured remote to use Backward Amarok command with 20000 as argument (as far as it denotes milliseconds). The command invoke does nothing. Of course, remote it self is tested and used with other frontends (say, irexec). But even without remote KDE Remote Config dialog permits to try command without RC (that "Try" button on command assigning dialog).

"Fast forward" (as well as all other commands I'm using) do work as expected.

Reproducible: Always
Comment 1 Myriam Schweingruber 2011-01-16 16:53:41 UTC
Which Phonon backend do you use? Did you try the backward shortcut with that backend? AFAIK there is a problem with the gstreamer backend in this regard
Comment 2 Andrew Gaydenko 2011-01-16 17:02:32 UTC
I have tried gstreamer and xine Phonon backends with the same result - "Backward" does nothing. Keyboard shortcut (Left arrow) does work at both cases.
Comment 3 Andrew Gaydenko 2011-01-16 17:04:35 UTC
Addition: I'm not sure "Component: Shortcuts" is valid selection.
Comment 4 Myriam Schweingruber 2011-01-16 18:46:44 UTC
Thank you for the feedback. Setting back to general.
Comment 5 abyss.andrey 2011-01-19 19:25:26 UTC
Amarok 2.4.0 (KDE 4.5.5) Kubuntu 10.10

"Backward" don't work using dbus.

"qdbus org.kde.amarok /Player Backward 5000" does nothing (with various values)

"Forward" works fine.
Comment 6 Andrew Gaydenko 2011-02-11 03:12:33 UTC
Probably the issue can not be called "unconfirmed" anymore, can it?
Comment 7 Myriam Schweingruber 2011-02-12 14:49:12 UTC
Indeed
Comment 8 Myriam Schweingruber 2011-06-04 12:16:17 UTC
This is an automated message from the triager:

Amarok 2.4.1 has been released on May 8 already. Could you please upgrade and test if you can still reproduce this bug?

Without feedback within a month we will close this bug as resolved.

Thank you for your understanding.
Comment 9 Andrew Gaydenko 2011-06-04 12:51:25 UTC
Yes, the issue still exists. To verify it is sufficient to start this command

qdbus org.kde.amarok /Player Backward 10000

and observe current playing position doesn't change. While

qdbus org.kde.amarok /Player Forward 10000

does work.
Comment 10 Andrew Gaydenko 2011-06-04 12:57:07 UTC
Reopening
Comment 11 Matthieu Bedouet 2011-07-25 20:20:49 UTC
Created attachment 62188 [details]
trivial fix

This bug seems trivial to fix, probably a typo? please see attached patch.
I can confirm it works fine with this patch.

Thanks
Comment 12 Sam Lade 2011-07-25 21:16:11 UTC
Git commit 9c07eab155427dbf2ea187456375ed0e87c7d87d by Sam Lade.
Committed on 25/07/2011 at 23:12.
Pushed by lade into branch 'master'.

Fix seek backward from dbus

Thanks to Matthieu Bedouet for the patch!

BUG:263287
FIXED-IN:2.4.2

M  +1    -1    src/dbus/mpris1/PlayerHandler.cpp

http://commits.kde.org/amarok/9c07eab155427dbf2ea187456375ed0e87c7d87d