Fix seek backward from dbus

Thanks to Matthieu Bedouet for the patch!

BUG:263287
FIXED-IN:2.4.2